Fixed # 32245: Accessibility v1.6.7 - Talkback - My care now  - Pharmacy details screen phone number : Make phone numbers in the entire app accessible.
Fixed # 32457: Accessibility v1.6.7 - Talkback - My care now  - Visit summary screen - Pdf report should able to focus and read

--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -396,6 +396,7 @@ dependencies {
     compile 'es.voghdev.pdfviewpager:library:1.0.3'
     compile 'commons-io:commons-io:2.5'
     compile 'com.github.whinc:ratingbar:1.1.1'
+    compile 'com.itextpdf:itextg:5.5.10'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.12.0'
 
