Added a Demo environment that uses only Mocked responses. Moved mock json responses to the res/raw folder (so we can see them in the main app).

--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -83,6 +83,11 @@ android {
         buildConfigField 'String', 'BUILD_TIME', 'new java.text.SimpleDateFormat("MMMM dd, yyyy", java.util.Locale.US).format(new java.util.Date(' + System.currentTimeMillis() + 'L))'
     }
 
+    //Required for Unit Tests to see mock json responses in res/raw directory
+    sourceSets {
+        test.resources.srcDirs += 'src/main/'
+    }
+
     buildTypes {
         def STRING = "String"
         def BOOLEAN = "boolean"
